--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ren-general"]
 	path = ren-general
-	url = ssh://rendaw@peppercorn.dyndns.org/~/code/libraries/ren-general.git
+	url = git@github.com:Rendaw/ren-general.git
